k8s/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: learn-git-branching
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  ingressClassName: nginx

  rules:
  - host: learn-git-branching.local

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: learn-git-branching
            port:
              number: 80
